fixed log section overflow (#157)
fixes #156

--- a/frontend/src/tasks/tasks.css
+++ b/frontend/src/tasks/tasks.css
@@ -160,6 +160,7 @@
 .tasks .tasks-table {
   border-collapse: collapse;
   border-spacing: 0 10px;
+  max-height: 265px;
   height: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
